# gunn

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TEST_STATUS.md  compose.dev.yml  compose.yml  comprehensive_test_report.json  gunn_concurrent_processing_spec.md  gunn_improvements_analysis.md  gunn_improvements_implementation_summary.md  gunn_library_feedback.md  pyproject.toml
.github/workflows/: ci.yml  contract-validation.yml  docs-pages.yml
.kiro/specs/multi-agent-battle-demo/: design.md  requirements.md  tasks.md
.kiro/specs/multi-agent-simulation-core/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  tech.md
.serena/: project.yml
benchmarks/: memory_benchmark.py  validation_benchmark.py
demo/: ARCHITECTURE.md  CODE_EXAMPLES.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  ERROR_HANDLING_SUMMARY.md  INITIALIZATION_SYSTEM.md  README.md  TROUBLESHOOTING.md  __init__.py  run_frontend.py
demo/backend/: __init__.py  ai_decision.py  battle_agent.py  battle_mechanics.py  effect_processor.py  error_handler.py  game_initializer.py  game_manager.py  gunn_integration.py  performance_monitor.py  server.py  test_async_agents.py
demo/examples/: effect_processing_demo.py  initialization_demo.py  performance_monitoring_demo.py  simple_effect_demo.py
demo/frontend/: README.md  __init__.py  __main__.py  api_client.py  input_handler.py  performance_monitor.py  renderer.py  ui_components.py
demo/shared/: __init__.py  constants.py  enums.py  errors.py  models.py  schemas.py  utils.py
demo/tests/: __init__.py  test_ai_decision.py  test_battle_mechanics.py  test_battle_observation_policy.py  test_concurrent_intents_demo.py  test_concurrent_processing.py  test_effect_integration.py  test_effect_processor.py  test_error_handling.py  test_error_integration.py  test_frontend_integration.py  test_frontend_renderer.py  test_game_initialization.py  test_initialization_integration.py  test_models.py  test_move_intent_runtime.py  test_observation_integration.py  test_performance_monitoring.py  test_performance_validation.py  test_schemas.py  test_schemas_integration.py  test_server_initialization.py  test_team_communication.py  test_utils.py
deploy/: README.md  deploy.sh  health-check.sh  prometheus.yml
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service-headless.yaml  service.yaml
docs/: IMPROVEMENTS_2025.md  Makefile  PRIORITY_FAIRNESS_QUOTA.md  TASK_33_SUMMARY.md  async_agent_development_tutorial.md  async_multi_agent_demo.md  build-and-deploy.md  collaborative_patterns.md  conf.py  deployment.md  errors.md  index.md  integration-patterns.md  intelligent_staleness.md  intent_validation.md  make.bat  replay_invariance.md  structure.md  tech.md  temporal_authority.md
docs/api/: gunn.adapters.llm.rst  gunn.adapters.rst  gunn.adapters.unity.rst  gunn.adapters.web.rst  gunn.cli.rst  gunn.config.rst  gunn.core.rst  gunn.facades.rst  gunn.policies.rst  gunn.rst  gunn.schemas.rst  gunn.storage.rst  gunn.utils.rst  index.md  modules.rst
examples/: README.md  __init__.py  abc_conversation_demo.py  async_agent_demo.py  async_multi_agent_demo.py  collaborative_behavior_demo.py  conversational_agent_demo.py  hashing_demo.py  intelligent_staleness_demo.py  performance_benchmark.py  quota_fairness_demo.py  run_all_demos.py  spatial_2d_demo.py  spatial_2d_demo_simple.py  spatial_2d_visual_demo.py  temporal_authority_demo.py  timing_demo.py  tutorial.md  unity_integration_demo.py  web_adapter_demo.py
schemas/: README.md  openapi.yaml
schemas/proto/: simulation.proto
scripts/: uv
src/gunn/: __init__.py  __main__.py
tests/: TASK_20_COMPLETION_SUMMARY.md  __init__.py  run_comprehensive_integration_tests.py  test_backpressure.py  test_basic.py  test_dummy_llm_adapter.py  test_error_recovery_scenarios.py  test_hashing.py  test_hashing_integration.py  test_integration_two_phase_commit.py  test_message_facade_integration.py  test_simple_observation.py  test_telemetry.py  test_timing_integration.py  test_two_phase_commit.py
tests/contract/: __init__.py  test_openapi_schema.py  test_protobuf_schema.py
tests/deployment/: test_config.py  test_docker_integration.py  test_health_checks.py  test_metrics_exporter.py
tests/integration/: _test_end_to_end_workflows.py  test_cancellation_staleness.py  test_collaborative_behavior.py  test_collaborative_integration.py  test_concurrent_intents.py  test_core_orchestrator.py  test_end_to_end_workflows.py  test_error_handling.py  test_error_recovery_scenarios.py  test_fault_tolerance.py  test_hashing.py  test_llm_streaming.py  test_message_facade.py  test_multi_agent_conversation_interruption.py  test_observation_distribution.py  test_policies_observation.py  test_replay_consistency_golden_traces.py  test_replay_determinism.py  test_replay_invariance_integration.py  test_telemetry_integration.py  test_timing.py  test_two_phase_commit.py  test_two_phase_commit_integration.py  test_web_adapter.py
tests/performance/: __init__.py  test_slo_validation.py
(+148 files in other folders)
